finished simply test of distilling, start working on autoLoss

--- a/config/gridworld.cfg
+++ b/config/gridworld.cfg
@@ -13,17 +13,18 @@ dim_s_c = 3
 dim_a = 4
 epsilon_start = 1.0
 epsilon_end = 0.1
-epsilon_decay_steps = 1000
+epsilon_decay_steps = 500
 
 lr_agent = 0.001
-total_episodes_agent = 20000
-total_episodes_test_agent = 50
-total_steps_agent = 100
+total_episodes_agent = 300
+total_episodes_test_agent = 100
+total_steps_agent = 50
 gamma_agent = 0.95
 buffer_size_agent = 20000
-batch_size_agent = 512
+batch_size_agent = 64
 synchronize_frequency_agent = 100
-valid_frequency_agent = 50
+valid_frequency_agent = 10
+save_frequency_agent = 100
 
 [emulator]
 display_flag = False
@@ -35,6 +36,7 @@ display_flag = False
 total_episodes_meta = 10000
 distill_mode = CE
 distill_temp = 1
-total_steps_distill = 10
+buffer_size_meta = 1000
+ema_decay = 0.95
 
 
