--- a/config/gridworld.cfg
+++ b/config/gridworld.cfg
@@ -7,24 +7,25 @@ save_images_dir = /datasets/BigLearning/haowen/AutoLossApps/saved_images
 
 [agent]
 # gridworld map size
-dim_s_h = 9
-dim_s_w = 20
-dim_s_c = 3
-dim_a = 4
+dim_s_h_agent = 9
+dim_s_w_agent = 20
+dim_s_c_agent = 3
+dim_a_agent = 4
 epsilon_start = 1.0
 epsilon_end = 0.1
-epsilon_decay_steps = 300
+epsilon_decay_steps = 500
 
 lr_agent = 0.001
-total_episodes_agent = 300
-total_episodes_test_agent = 20
+total_episodes_agent = 1000
+total_episodes_test_agent = 1
 total_steps_agent = 50
 gamma_agent = 0.95
 buffer_size_agent = 20000
-batch_size_agent = 64
-synchronize_frequency_agent = 100
+batch_size_agent = 256
+synchronize_frequency_agent = 3
 valid_frequency_agent = 20
 save_frequency_agent = 100
+mute_agent = True
 
 [emulator]
 display_flag = False
@@ -35,6 +36,17 @@ total_episodes_meta = 10000
 distill_mode = CE
 distill_temp = 1
 buffer_size_meta = 1000
-ema_decay = 0.8
+ema_decay = 0.95
 
+dim_s_meta = 14
+dim_h_meta = 32
+dim_a_meta = 5
+cliprange_meta = 0.2
+#controller = MlpPPO
+controller = designed
+batch_size_meta = 200
+save_frequency_meta = 20
+reward_strategy_meta = square
 
+lr_meta = 0.02
+logits_scale_meta = 2
