something went wrong

--- a/config/gridworld.cfg
+++ b/config/gridworld.cfg
@@ -13,7 +13,7 @@ dim_s_c_agent = 3
 dim_a_agent = 4
 epsilon_start = 1.0
 epsilon_end = 0.1
-epsilon_decay_steps = 500
+epsilon_decay_steps = 1000
 
 lr_agent = 0.001
 total_episodes_agent = 1000
@@ -23,9 +23,10 @@ gamma_agent = 0.95
 buffer_size_agent = 20000
 batch_size_agent = 256
 synchronize_frequency_agent = 3
-valid_frequency_agent = 20
+valid_frequency_agent = 50
 save_frequency_agent = 100
 mute_agent = True
+lesson_length = 20
 
 [emulator]
 display_flag = False
