about to implement real-time reward

--- a/config/gridworld.cfg
+++ b/config/gridworld.cfg
@@ -13,10 +13,10 @@ dim_s_c_agent = 3
 dim_a_agent = 4
 epsilon_start = 1.0
 epsilon_end = 0.1
-epsilon_decay_steps = 300
+epsilon_decay_steps = 200
 
 lr_agent = 0.001
-total_episodes_agent = 300
+total_episodes_agent = 200
 total_episodes_test_agent = 20
 total_steps_agent = 50
 gamma_agent = 0.95
@@ -25,7 +25,7 @@ batch_size_agent = 256
 synchronize_frequency_agent = 100
 valid_frequency_agent = 50
 save_frequency_agent = 100
-mute_agent = False
+mute_agent = True
 lesson_length = 50
 
 [emulator]
@@ -37,17 +37,18 @@ total_episodes_meta = 10000
 distill_mode = CE
 distill_temp = 1
 buffer_size_meta = 1000
-ema_decay = 0.95
+ema_decay = 0.9
+ema_decay_auc_baseline = 0.95
 
 dim_s_meta = 14
 dim_h_meta = 32
 dim_a_meta = 5
 cliprange_meta = 0.2
-#controller = MlpPPO
-controller = designed
+controller = MlpPPO
+#controller = designed
 batch_size_meta = 200
 save_frequency_meta = 20
-reward_strategy_meta = square
+reward_strategy_meta = linear
 
 lr_meta = 0.02
-logits_scale_meta = 2
+logits_scale_meta = 0.5
