--- a/config/gridworld.cfg
+++ b/config/gridworld.cfg
@@ -42,13 +42,14 @@ ema_decay_auc_baseline = 0.95
 
 dim_s_meta = 14
 dim_h_meta = 32
-dim_a_meta = 5
+dim_a_meta = 2
 cliprange_meta = 0.2
 controller = MlpPPO
 #controller = designed
 batch_size_meta = 200
 save_frequency_meta = 20
 reward_strategy_meta = linear
+gamma_meta = 0
 
 lr_meta = 0.02
 logits_scale_meta = 0.5
