--- a/config/gridworld.cfg
+++ b/config/gridworld.cfg
@@ -16,8 +16,8 @@ epsilon_end = 0.1
 epsilon_decay_steps = 200
 
 lr_agent = 0.001
-total_episodes_agent = 200
-total_episodes_test_agent = 20
+total_episodes_agent = 100
+total_episodes_test_agent = 50
 total_steps_agent = 50
 gamma_agent = 0.95
 buffer_size_agent = 20000
@@ -34,22 +34,22 @@ display_flag = False
 
 [meta]
 total_episodes_meta = 10000
-distill_mode = CE
+distill_mode = KL
 distill_temp = 1
 buffer_size_meta = 1000
-ema_decay = 0.9
+ema_decay_state = 0.9
 ema_decay_auc_baseline = 0.95
 
 dim_s_meta = 14
 dim_h_meta = 32
-dim_a_meta = 2
+dim_a_meta = 3
 cliprange_meta = 0.2
 controller = MlpPPO
 #controller = designed
-batch_size_meta = 200
+batch_size_meta = 1000
 save_frequency_meta = 20
 reward_strategy_meta = linear
-gamma_meta = 0
+gamma_meta = 1
 
-lr_meta = 0.02
-logits_scale_meta = 0.5
+lr_meta = 0.001
+logits_scale_meta = 2
