automaticly select model_dir param

--- a/config/gridworld.cfg
+++ b/config/gridworld.cfg
@@ -1,7 +1,7 @@
 [env]
 exp_dir = ~/haowen/GitHub/AutoLossApps
-model_dir = /datasets/BigLearning/haowen/AutoLossApps/saved_models
-save_images_dir = /datasets/BigLearning/haowen/AutoLossApps/saved_images
+model_dir1 = /datasets/BigLearning/haowen/AutoLossApps/saved_models
+model_dir2 = /media/haowen/AutoLossApps/saved_models
 
 [data]
 
@@ -49,7 +49,7 @@ controller = MlpPPO
 batch_size_meta = 1000
 save_frequency_meta = 20
 reward_strategy_meta = linear
-gamma_meta = 1
+gamma_meta = 0.95
 
 lr_meta = 0.001
 logits_scale_meta = 2
