applied parallel actors

--- a/config/gridworld.cfg
+++ b/config/gridworld.cfg
@@ -36,7 +36,7 @@ display_flag = False
 total_episodes_meta = 10000
 distill_mode = KL
 distill_temp = 1
-buffer_size_meta = 1000
+buffer_size_meta = 10000
 ema_decay_state = 0.9
 ema_decay_auc_baseline = 0.95
 
@@ -46,10 +46,11 @@ dim_a_meta = 5
 cliprange_meta = 0.2
 controller = MlpPPO
 #controller = designed
-batch_size_meta = 1000
+batch_size_meta = 512
 save_frequency_meta = 20
 reward_strategy_meta = linear
 gamma_meta = 0.95
 
 lr_meta = 0.001
 logits_scale_meta = 2
+n_parallel_actor = 10
