add entropy bonus to meta model

--- a/config/gridworld.cfg
+++ b/config/gridworld.cfg
@@ -52,5 +52,6 @@ reward_strategy_meta = linear
 gamma_meta = 0.95
 
 lr_meta = 0.001
-logits_scale_meta = 2
+logits_scale_meta = 0.5
 n_parallel_actor = 5
+entropy_bonus_beta_meta = 0.0001
