--- a/config/gridworld_tdppo.cfg
+++ b/config/gridworld_tdppo.cfg
@@ -11,26 +11,26 @@ dim_s_h_agent = 9
 dim_s_w_agent = 20
 dim_s_c_agent = 3
 dim_a_agent = 4
-epsilon_start = 1.0
+epsilon_start = 0.5
 epsilon_end = 0.1
-epsilon_decay_steps = 200
+epsilon_decay_steps = 500
 
-lr_agent = 0.001
-total_episodes_agent = 100
+lr_agent = 0.0001
+total_episodes_agent = 1000
 total_episodes_test_agent = 50
 total_steps_agent = 50
 gamma_agent = 0.95
 buffer_size_agent = 20000
-batch_size_agent = 256
+batch_size_agent = 512
 synchronize_frequency_agent = 100
 valid_frequency_agent = 50
 save_frequency_agent = 100
 mute_agent = True
-lesson_length = 50
+lesson_length = 1000
 
 [emulator]
-display_flag = False
-#display_flag = True
+#display_flag = False
+display_flag = True
 
 [meta]
 total_episodes_meta = 10000
@@ -44,7 +44,7 @@ dim_s_meta = 7
 dim_h_meta = 32
 dim_a_meta = 3
 cliprange_meta = 0.2
-controller = MlpPPO
+controller = CNNPPO
 #controller = designed
 batch_size_meta = 512
 save_frequency_meta = 20
@@ -52,6 +52,6 @@ reward_strategy_meta = linear
 gamma_meta = 0.95
 
 lr_meta = 0.001
-logits_scale_meta = 0.5
+logits_scale_meta = 0.2
 n_parallel_actor = 5
 entropy_bonus_beta_meta = 0.0001
