--- a/config/gridworld_tdppo.cfg
+++ b/config/gridworld_tdppo.cfg
@@ -15,12 +15,12 @@ epsilon_start = 0.5
 epsilon_end = 0.1
 epsilon_decay_steps = 500
 
-lr_agent = 0.0001
+lr_agent = 0.001
 total_episodes_agent = 1000
 total_episodes_test_agent = 50
 total_steps_agent = 50
 gamma_agent = 0.95
-buffer_size_agent = 20000
+buffer_size_agent = 2000
 batch_size_agent = 512
 synchronize_frequency_agent = 100
 valid_frequency_agent = 50
@@ -29,8 +29,8 @@ mute_agent = True
 lesson_length = 1000
 
 [emulator]
-#display_flag = False
-display_flag = True
+display_flag = False
+#display_flag = True
 
 [meta]
 total_episodes_meta = 10000
@@ -55,3 +55,5 @@ lr_meta = 0.001
 logits_scale_meta = 0.2
 n_parallel_actor = 5
 entropy_bonus_beta_meta = 0.0001
+
+one_step_td = False
