--- a/config/gridworld_tdppo.cfg
+++ b/config/gridworld_tdppo.cfg
@@ -11,15 +11,15 @@ dim_s_h_agent = 9
 dim_s_w_agent = 20
 dim_s_c_agent = 3
 dim_a_agent = 4
-epsilon_start = 0.5
-epsilon_end = 0.1
-epsilon_decay_steps = 500
+epsilon_start = 0.1
+epsilon_end = 0.0
+epsilon_decay_steps = 1000
 
-lr_agent = 0.001
-total_episodes_agent = 1000
+lr_agent = 0.0001
+total_episodes_agent = 10000
 total_episodes_test_agent = 50
 total_steps_agent = 50
-gamma_agent = 0.95
+gamma_agent = 0.99
 buffer_size_agent = 2000
 batch_size_agent = 512
 synchronize_frequency_agent = 100
@@ -44,7 +44,7 @@ dim_s_meta = 7
 dim_h_meta = 32
 dim_a_meta = 3
 cliprange_meta = 0.2
-controller = CNNPPO
+controller = MlpPPO
 #controller = designed
 batch_size_meta = 512
 save_frequency_meta = 20
@@ -56,4 +56,4 @@ logits_scale_meta = 0.2
 n_parallel_actor = 5
 entropy_bonus_beta_meta = 0.0001
 
-one_step_td = False
+one_step_td = True
