tdppo on gridworld

--- a/config/acrobot_tdppo.cfg
+++ b/config/acrobot_tdppo.cfg
@@ -11,22 +11,22 @@ dim_s_h_agent = 9
 dim_s_w_agent = 20
 dim_s_c_agent = 3
 dim_a_agent = 4
-epsilon_start = 1
-epsilon_end = 0.1
-epsilon_decay_steps = 200
+epsilon_start = 0.1
+epsilon_end = 0.0
+epsilon_decay_steps = 1000
 
-lr_agent = 0.001
-total_episodes_agent = 150
+lr_agent = 0.0001
+total_episodes_agent = 10000
 total_episodes_test_agent = 50
 total_steps_agent = 50
-gamma_agent = 0.95
-buffer_size_agent = 20000
+gamma_agent = 0.99
+buffer_size_agent = 2000
 batch_size_agent = 512
 synchronize_frequency_agent = 100
 valid_frequency_agent = 50
 save_frequency_agent = 100
 mute_agent = True
-lesson_length = 50
+lesson_length = 1000
 
 [emulator]
 display_flag = False
@@ -40,20 +40,20 @@ buffer_size_meta = 10000
 ema_decay_state = 0.9
 ema_decay_auc_baseline = 0.95
 
-dim_s_meta = 4
-dim_h_meta = 20
+dim_s_meta = 7
+dim_h_meta = 32
 dim_a_meta = 3
 cliprange_meta = 0.2
 controller = MlpPPO
 #controller = designed
-batch_size_meta = 256
+batch_size_meta = 512
 save_frequency_meta = 20
-reward_strategy_meta = uniform
-gamma_meta = 0.99
+reward_strategy_meta = linear
+gamma_meta = 0.95
 
 lr_meta = 0.001
 logits_scale_meta = 0.2
-n_parallel_actor = 1
-entropy_bonus_beta_meta = 0.001
+n_parallel_actor = 5
+entropy_bonus_beta_meta = 0.0001
 
-one_step_td = False
+one_step_td = True
