--- a/config/gridworld_tdppo.cfg
+++ b/config/gridworld_tdppo.cfg
@@ -16,7 +16,7 @@ epsilon_end = 0.1
 epsilon_decay_steps = 200
 
 lr_agent = 0.001
-total_episodes_agent = 150
+total_episodes_agent = 1000
 total_episodes_test_agent = 50
 total_steps_agent = 50
 gamma_agent = 0.95
@@ -33,10 +33,10 @@ display_flag = False
 #display_flag = True
 
 [meta]
-total_episodes_meta = 10000
+total_episodes_meta = 1000
 distill_mode = KL
 distill_temp = 1
-buffer_size_meta = 20000
+buffer_size_meta = 100000
 ema_decay_state = 0.9
 ema_decay_auc_baseline = 0.95
 
@@ -51,9 +51,10 @@ save_frequency_meta = 20
 reward_strategy_meta = uniform
 gamma_meta = 0.99
 
-lr_meta = 0.001
-logits_scale_meta = 0.2
+lr_meta = 0.0001
+logits_scale_meta = 0.1
 n_parallel_actor = 1
 entropy_bonus_beta_meta = 0.001
 
-one_step_td = False
+one_step_td = True
+warmup_steps_meta = 20
