5task, aim at `distral`

--- a/config/gridworld_tdppo.cfg
+++ b/config/gridworld_tdppo.cfg
@@ -15,10 +15,20 @@ epsilon_start = 1
 epsilon_end = 0.1
 epsilon_decay_steps = 200
 
+distill_mode = KL
+kl_temp = 1
+c_kl_agent = 0.000
+c_ent_agent = 0.000
+c_distill_agent = 0.1
+alpha_reg_agent = 0.5
+beta_reg_agent = 10000
+
 lr_agent = 0.001
-total_episodes_agent = 1000
-total_episodes_test_agent = 50
+total_episodes_agent = 500
 total_steps_agent = 50
+lesson_length = 50
+
+total_episodes_test_agent = 200
 gamma_agent = 0.95
 buffer_size_agent = 20000
 batch_size_agent = 512
@@ -26,7 +36,6 @@ synchronize_frequency_agent = 100
 valid_frequency_agent = 50
 save_frequency_agent = 100
 mute_agent = True
-lesson_length = 50
 
 [emulator]
 display_flag = False
@@ -34,27 +43,25 @@ display_flag = False
 
 [meta]
 total_episodes_meta = 1000
-distill_mode = KL
-distill_temp = 1
-buffer_size_meta = 100000
+buffer_size_meta = 5000
 ema_decay_state = 0.9
 ema_decay_auc_baseline = 0.95
 
-dim_s_meta = 4
+dim_s_meta = 5
 dim_h_meta = 20
-dim_a_meta = 3
+dim_a_meta = 5
 cliprange_meta = 0.2
 controller = MlpPPO
 #controller = designed
-batch_size_meta = 256
+batch_size_meta = 128
 save_frequency_meta = 20
 reward_strategy_meta = uniform
-gamma_meta = 0.99
+gamma_meta = 0.995
 
-lr_meta = 0.0001
+lr_meta = 0.001
 logits_scale_meta = 0.1
 n_parallel_actor = 1
-entropy_bonus_beta_meta = 0.001
+entropy_bonus_beta_meta = 0.0001
 
-one_step_td = True
+one_step_td = False
 warmup_steps_meta = 20
