add three rooms setting for gridword

--- a/config/gridworld_tdppo.cfg
+++ b/config/gridworld_tdppo.cfg
@@ -38,8 +38,8 @@ save_frequency_agent = 100
 mute_agent = True
 
 [emulator]
-display_flag = False
-#display_flag = True
+#display_flag = False
+display_flag = True
 
 [meta]
 total_episodes_meta = 1000
@@ -51,8 +51,8 @@ dim_s_meta = 10
 dim_h_meta = 20
 dim_a_meta = 5
 cliprange_meta = 0.2
-controller = MlpPPO
-#controller = designed
+#controller = MlpPPO
+controller = designed
 batch_size_meta = 128
 save_frequency_meta = 20
 reward_strategy_meta = uniform
