--- a/config/gridworld_tdppo.cfg
+++ b/config/gridworld_tdppo.cfg
@@ -2,6 +2,7 @@
 exp_dir = ~/haowen/GitHub/AutoLossApps
 model_dir1 = /datasets/BigLearning/haowen/AutoLossApps/saved_models
 model_dir2 = /media/haowen/AutoLossApps/saved_models
+model_dir3 = /home/haowen/saved/AutoLossApps/saved_models
 
 [data]
 
@@ -25,10 +26,11 @@ beta_reg_agent = 10000
 
 lr_agent = 0.001
 total_episodes_agent = 100
-total_steps_agent = 50
-lesson_length = 1000
+total_steps_agent = 100
+total_steps_test_agent = 50
+lesson_length = 100
 
-total_episodes_test_agent = 200
+total_episodes_test_agent = 20
 gamma_agent = 0.95
 buffer_size_agent = 10000
 batch_size_agent = 512
@@ -36,10 +38,11 @@ synchronize_frequency_agent = 100
 valid_frequency_agent = 1
 save_frequency_agent = 100
 mute_agent = True
+greedy_agent = True
 
 [emulator]
-#display_flag = False
-display_flag = True
+display_flag = False
+#display_flag = True
 
 [meta]
 total_episodes_meta = 1000
@@ -47,12 +50,12 @@ buffer_size_meta = 500
 ema_decay_state = 0.0
 ema_decay_auc_baseline = 0.95
 
-dim_s_meta = 10
+dim_s_meta = 7
 dim_h_meta = 20
-dim_a_meta = 5
+dim_a_meta = 4
 cliprange_meta = 0.2
-#controller = MlpPPO
-controller = designed
+controller = MlpPPO
+#controller = designed
 batch_size_meta = 128
 save_frequency_meta = 20
 reward_strategy_meta = uniform
@@ -64,4 +67,4 @@ n_parallel_actor = 1
 entropy_bonus_beta_meta = 0.0001
 
 one_step_td = False
-warmup_steps_meta = 20
+warmup_steps_meta = 0
