--- a/config/gridworld_tdppo.cfg
+++ b/config/gridworld_tdppo.cfg
@@ -19,18 +19,19 @@ epsilon_decay_steps = 10000
 distill_mode = KL
 kl_temp = 1
 c_kl_agent = 0.000
-c_ent_agent = 0.000
+c_ent_agent = 0.0001
 c_distill_agent = 0.1
 alpha_reg_agent = 0.5
 beta_reg_agent = 10000
 
 lr_agent = 0.001
-total_episodes_agent = 100
+total_episodes_agent = 200
 total_steps_agent = 100
 total_steps_test_agent = 50
 lesson_length = 100
+lesson_length_distill = 20
 
-total_episodes_test_agent = 20
+total_episodes_test_agent = 100
 gamma_agent = 0.95
 buffer_size_agent = 10000
 batch_size_agent = 512
@@ -50,12 +51,12 @@ buffer_size_meta = 500
 ema_decay_state = 0.0
 ema_decay_auc_baseline = 0.95
 
-dim_s_meta = 7
+dim_s_meta = 4
 dim_h_meta = 20
 dim_a_meta = 4
 cliprange_meta = 0.2
-controller = MlpPPO
-#controller = designed
+#controller = MlpPPO
+controller = designed
 batch_size_meta = 128
 save_frequency_meta = 20
 reward_strategy_meta = uniform
@@ -67,4 +68,5 @@ n_parallel_actor = 1
 entropy_bonus_beta_meta = 0.0001
 
 one_step_td = False
+off_policy_meta = False
 warmup_steps_meta = 0
