--- a/config/gridworld_tdppo.cfg
+++ b/config/gridworld_tdppo.cfg
@@ -31,7 +31,7 @@ total_steps_test_agent = 50
 lesson_length = 100
 lesson_length_distill = 20
 
-total_episodes_test_agent = 100
+total_episodes_test_agent = 20
 gamma_agent = 0.95
 buffer_size_agent = 10000
 batch_size_agent = 512
@@ -55,8 +55,8 @@ dim_s_meta = 4
 dim_h_meta = 20
 dim_a_meta = 4
 cliprange_meta = 0.2
-#controller = MlpPPO
-controller = designed
+controller = MlpPPO
+#controller = designed
 batch_size_meta = 128
 save_frequency_meta = 20
 reward_strategy_meta = uniform
