--- a/config/gridworld_tdppo.cfg
+++ b/config/gridworld_tdppo.cfg
@@ -25,11 +25,11 @@ alpha_reg_agent = 0.5
 beta_reg_agent = 10000
 
 lr_agent = 0.001
-total_episodes_agent = 200
+total_episodes_agent = 100
 total_steps_agent = 100
 total_steps_test_agent = 50
-lesson_length = 20
-lesson_length_distill = 20
+lesson_length = 200
+lesson_length_distill = 100
 
 total_episodes_test_agent = 20
 gamma_agent = 0.95
@@ -42,21 +42,21 @@ mute_agent = True
 greedy_agent = True
 
 [emulator]
-display_flag = False
-#display_flag = True
+#display_flag = False
+display_flag = True
 
 [meta]
 total_episodes_meta = 1000
 buffer_size_meta = 500
-ema_decay_state = 0.0
+ema_decay_state = 0.9
 ema_decay_auc_baseline = 0.95
 
 dim_s_meta = 4
 dim_h_meta = 20
-dim_a_meta = 4
+dim_a_meta = 3
 cliprange_meta = 0.2
-controller = MlpPPO
-#controller = designed
+#controller = MlpPPO
+controller = designed
 batch_size_meta = 128
 save_frequency_meta = 20
 reward_strategy_meta = uniform
